--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "postcss": "^7.0.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
